Closed Bug 518831 Opened 16 years ago Closed 16 years ago

When OOM occurs don't release memory for new region if we didn't allocate any

Categories

(Tamarin Graveyard :: Garbage Collection (mmGC), defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: tierney, Assigned: tierney)

Details

Attachments

(1 file)

Not all paths through GCHeap::ExpandHeapInternal will allocate a new region, but if we fail to allocate a new block array in the gotmemory section, we were always releasing the new region memory. Patch adds a null check so we don't free the new region if we didn't allocate it.
Attachment #402833 - Flags: review?(lhansen)
Comment on attachment 402833 [details] [diff] [review] Null check newRegionAddr before releasing it Feel free to reindent that function while you're at it; it needs the love.
Attachment #402833 - Flags: review?(lhansen) → review+
Pushed, with some indenting fixes: http://hg.mozilla.org/tamarin-redux/rev/f3b8106e2565
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Resolved fixed engineering / work item that has been pushed. Setting status to verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: