Fix crash during OOM handling, also redo some indenting to clean up function. bug 518831 (r=lhansen)